apps/sabnzbd/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sabnzbd-service
spec:
  selector:
    app: sabnzbd
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
