apps/sabnzbd/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sabnzbd-virtual-service
  namespace: media
spec:
  hosts:
  - "downloader.securefamily.tv"
  gateways:
  - default/istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: sabnzbd-service.media.svc.cluster.local
